--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "JavaScript development environment MEAN Stack Tools Template",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check open:src",
+    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
     "open:src": "babel-node buildScripts/srcServer.js",
     "security-check": "nsp check",
+    "lint:watch": "npm run lint -- --watch",
+    "lint": "esw webpack.config.* src buildScripts --color",
     "localtunnel": "lt --port 3000 --subdomain roots",
-    "share": "npm-run-all --parallel open:src localtunnel"
+    "share": "npm-run-all --parallel open:src localtunnel",
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Martin Johansson",
   "license": "MIT",
